Fix viewport overflow on mobile and tablets

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,13 @@
-html, body, #map-canvas {
-	height: 100%;
-	margin-top: 0;
+html, body {
+	height: 100vh;
+	width: 100vm;
+	margin: 0;
+	padding: 0;
+}
+
+#map-canvas {
+	height: calc(100% - 50px);
+	margin: 0;
 	padding: 0;
 }
 
@@ -17,6 +24,7 @@ html, body, #map-canvas {
 
 .info-window {
 	max-width: 320px;
+	max-height: 65px;
 	padding-top: 20px;
 }
 
@@ -24,7 +32,7 @@ html, body, #map-canvas {
 	max-width: 100%;
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 650px) {
 	.info-window {
 		max-width: 290px;
 	}
@@ -40,4 +48,10 @@ html, body, #map-canvas {
 	.form-control {
 		max-width: 80%;
 	}
+
+	#map-canvas {
+	height: calc(100% - 75px);
+	margin: 0;
+	padding: 0;
+}
 }
